added drilldown feature to column bar chart
